# aoc2024

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: ci.yml
input/: day07_test05.txt  day07_test06.txt  day07_test08.txt  day07_test09.txt  day08_test06.txt  day10_test03.txt  day10_test04.txt  day10_test06.txt  day10_test07.txt  day14_test03.txt  day15_test03.txt  day15_test04.txt  day15_test05.txt  day15_test06.txt  day15_test07.txt  day15_test08.txt
src/: lib.rs
src/aoc/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  mod.rs  utils.rs
