[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/McDamon/aoc2024"
authors = ["Andrew McMahon <andrew.p.mcmahon@gmail.com>"]

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
grid = "0.15.0"
indextree = "4.7.3"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
stacker = "0.1.17"
